<resources>
    <string name="app_name">Universe Things</string>
    <string name="image_splashscreen">image_splashscreen</string>
    <string name="universeThings">UniverseThings adalah suatu aplikasi yang menyediakan informasi seputar Tata Surya dengan memasukan nama planet/galaxy/meteor.</string>
    <string name="inputan">Planet/Galaxy/Meteor</string>
    <string name="cari">Cari</string>
    <string name="input_kosong">Inputan tidak boleh kosong!</string>
    <string name="input_angka">Inputan tidak boleh Angka!</string>
    <string name="input_karakter">Inputan tidak boleh Karakter!</string>
    <string name="tidak_diketahui">Planet, Galaxy atau Meteor tidak dikenali!</string>
    <string name="exit_dialog">Apakah anda yakin ingin keluar?</string>
    <string name="planet_merkurius">Merkurius</string>
    <string name="planet_venus">Venus</string>
    <string name="planet_bumi">Bumi</string>
    <string name="planet_mars">Mars</string>
    <string name="planet_jupiter">Jupiter</string>
    <string name="planet_saturnus">Saturnus</string>
    <string name="planet_uranus">Uranus</string>
    <string name="planet_neptunus">Neptunus</string>
    <string name="andromeda">Andromeda</string>
    <string name="bima_sakti">Bima Sakti</string>
    <string name="black_eye">Black Eye</string>
    <string name="smiley">Smiley</string>
    <string name="ursa_mayor">Ursa Mayor</string>
    <string name="orionid">Orionid</string>
    <string name="perseid">Perseid</string>
    <string name="quadrantid">Quadrantid</string>
    <string name="infor_andromeda">Galaksi ini berisi 1 triliun bintang dan sangatlah jauh</string>
    <string name="infor_mars">-Mars mempunyai Gunung Tertinggi di Tata Surya\n-Mars memiliki Badai Debu Terbesar di Tata Surya\n-Mars Mempunyai Air</string>
    <string name="infor_bumi">-Bumi Adalah Planet Air\n-Atmosfer Bumi sangat tebal\n-Bumi adalah tempat tinggal makhluk hidup</string>
    <string name="infor_venus">-Venus disebut sebagai Bintang Kejora\n- Venus merupakan planet terpanas di Tata Surya\n-Di Venus Matahari terbit dari barat</string>
    <string name="infor_merkurius">-Planet terdekat dari Matahari\n-Sehari di Merkurius lebih lama daripada setahun di Merkurius\n-Merkurius adalah planet terkecil</string>
    <string name="infor_jupiter">-Jupiter adalah planet terbesar di tata surya\n-Jupiter mengalami hari paling pendek\n-Jupiter memiliki satelit terbesar pada tata surya</string>
    <string name="infor_saturnus">-Nama Saturnus Diambil Dari Nama Dewa Yunani\n-Ternyata Cincin Saturnus Bisa Menghilang\n-Planet Terbesar Kedua Dalam Tata Surya</string>
    <string name="infor_uranus">-Uranus sering disebut sebagai planet es\n-Uranus merupakan planet ke 3 terbesar di tata surya\n-Hanya satu pesawat saja yang pernah menjelajahi Uranus</string>
    <string name="infor_neptunus">-Neptunus adalah planet terjauh dari matahari\n-Gravitasi hampir sama dengan Bumi\n-Penemuan Neptunus masih kontroversi</string>
    <string name="infor_quadrantid">Meteor yang asalnya dari konstilasi Bootes</string>
    <string name="infor_bima">galaksi yang memiliki berbagai benda angkasa di dalamnya dan bergerak dengan sangat teratur</string>
    <string name="infor_blackeye">Memiliki cincin kabut dan berwarna gelap Cincin kabut tersebut mengelilingi intinya yang cukup terang Galaksi ini seperti sebuah mata sehingga disebut Black Eye</string>
    <string name="infor_smiley">Galaksi ini memiliki bentuk bak emotikon wajah tersenyum lengkap dengan bibir melengkung serta mata dan hidung</string>
    <string name="infor_ursamayor">Ursa Mayor sering dikenal oleh nusantara karena terlihat sebagai tujuh bintang terang yang berguna bagi kapal dan juga perahu sebagai patokan saat berlayar di malam hari</string>
    <string name="infor_orionid">Orionid ini diambil dari tempat bercahaya sebagai titik meteor yang disebut dengan konstelasi orion</string>
    <string name="infor_perseid">Meteor Perseid ini dapat kita lihat dengan jelas pada belahan bumi bagian utara ketika malam hari di musim panas pada saat itu lagit terlihat cerah</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="konfirmasi_hapus">Anda yakin ingin menghapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="histori">Histori Pencarian</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="input_combine">Inputan tidak bisa kombinasi Angka dan Karakter!</string>
    <string name="aboutapk">UniverseThings merupakan sebuah aplikasi Android untuk memberikan informasi terkait Planet, Galaxy, dan Meteor.\n\nAplikasi ini dibuat untuk kelas Mobpro 1. Temukan kodenya di https://github.com/wulanmaulidya/universeThings\n\nCopyright © 2023 Wulan Maulidya.\nAll rights reserved.</string>
    <string name="share">Bagikan Aplikasi</string>
    <string name="notif_title">"Ada Universe Baru "</string>
    <string name="notif_text">Cek Sekarang Juga!</string>
    <string name="koneksi_error">koneksi eror</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data Universe otomatis</string>
    <string name="ok">Ok</string>
    <string name="premissionsNotif">Untuk mendapatkan notifikasi, anda harus mengaktifkan izin notifikasi secara manual melalui details aplikasi ini.\n\nAbaikan jika sudah mengizinkan akses notifikasi.</string>
    <string name="action_switch_layout">Ubah Layout</string>
    <string name="message">%1$s diklik!</string>


</resources>